# larwirecell

./: .gitignore  CMakeLists.txt
larwirecell/: CMakeLists.txt  README  guidelines.org  integration.org  wire-0.5.2c
larwirecell/Components/: CMakeLists.txt  ChannelNoiseDB.cxx  ChannelNoiseDB.h  ChannelSelectorDB.cxx  ChannelSelectorDB.h  CookedFrameSink.cxx  CookedFrameSink.h  CookedFrameSource.cxx  CookedFrameSource.h  FrameSaver.cxx  FrameSaver.h  LazyFrameSource.cxx  LazyFrameSource.h  MultiChannelNoiseDB.cxx  MultiChannelNoiseDB.h  README.org  RawFrameSource.cxx  RawFrameSource.h  SimChannelSink.cxx  SimChannelSink.h  SimDepoSource.cxx  SimDepoSource.h
larwirecell/Interfaces/: CMakeLists.txt  IArtEventVisitor.h  MainTool.h
larwirecell/LArInterface/: BV_module.cc  CMakeLists.txt  NoiseFilter_module.cc  Test_module.cc  WireCellNoiseFilter_module.cc  read-one.fcl  wct_bv.fcl  wirecellmodules.fcl  wirecellmodules_microboone.fcl
larwirecell/Modules/: BlipMaker_module.cc  CMakeLists.txt  EventButcher_module.cc  WireCellToolkit_module.cc
larwirecell/Modules/Geometry/: CMakeLists.txt  CTreeGeometry_module.cc  README  ctree_geometry_dune10kt_1x2x6.fcl  ctree_geometry_icarus.fcl  ctree_geometry_protodune.fcl
larwirecell/Tools/: CMakeLists.txt  Main.cxx  Main.h  Main_tool.cc  WCLS.cxx  WCLS.h  WCLS_tool.cc
larwirecell/artcfg/: bogoplop.fcl  bogoplopsim.fcl  bogosim.fcl  frame-shunt.fcl  nfsp-butcher.fcl  test_mchdb.fcl  uboone-filtered-sigproc.fcl  uboone-nf-sp-mag.fcl  uboone-nf-sp.fcl  wcls-sim-nf-sp.fcl  wcls-sim.fcl
larwirecell/docs/: build-framework-jsonnet-ssi-build.patch  development.org  guidelines.org  index.org  wire-cfg-0.5.2c  wirecell-ssi-build.patch
larwirecell/wctcfg/: bogoflop.jsonnet  bogoplopsim.jsonnet  bogosim.jsonnet  frame-shunt.jsonnet  larsoft.jsonnet  test_mchdb.jsonnet  uboone-filtered-sigproc.jsonnet  uboone-nf-sp-mag.jsonnet  uboone-nf-sp.jsonnet  uboone-nfsp.jsonnet
ups/: product_deps
